# solana-bounty-agent

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  proposal.md
programs/escrow_agent/src/: errors.rs  lib.rs  state.rs
programs/escrow_agent/src/instructions/: check_and_execute.rs  confirm_delivery.rs  make.rs  mod.rs  refund.rs  take.rs
tests/: anchor_workspace.ts  escrow_agent.ts
